fix(Objectives->Visibility form): Added scroll when creating new visibility form

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -4804,9 +4804,9 @@ input[type=number]::-webkit-outer-spin-button {
 .visibilityFormHeight .ui-dialog-content {
   height: calc(100% - 75px) !important;
 }
-/*.visibilityFormHeight .ui-dialog-content .visibilityContainer {*/
-  /*height: calc(100% - 50px);*/
-/*}*/
+.visibilityContainer.inStoreForm {
+  height: calc(100% - 80px);
+}
 .visibilityFormHeight .ui-dialog-content .visibilityContainer .banner_inner {
   height: 100%;
 }
